--- a/helloworld/css/main.css
+++ b/helloworld/css/main.css
@@ -13,16 +13,17 @@ h2 {
 	font-weight:800;
 	font-size:1.4em;
 	margin:1.2em 0 0.2em 0;
-	padding-bottom:0.2em;
+	padding:0 0 0.2em 2em;
 }
 
 h3 {
 	font-weight:600;
+	padding-left: 6em;
 }
 
 h4 {
 	color:#888;
-	padding:0.2em 0 0 0.1em;
+	padding:0.2em 0 0 7em;
 	font-size:0.9em;
 }
 
@@ -92,7 +93,7 @@ h4 {
 }
 
 .arrivalToggle {
-	float:right;
+	float:left;
 }
 
 .arrivalToggle input {
